Results and examples docs; fix notebook progress bar; add some more results methods

--- a/docs/source/notebooks/area_properties.ipynb
+++ b/docs/source/notebooks/area_properties.ipynb
@@ -5,7 +5,7 @@
    "id": "4420ea1d",
    "metadata": {},
    "source": [
-    "# 01 - Calculating Area Properties"
+    "# Calculating Area Properties"
    ]
   },
   {
@@ -38,6 +38,8 @@
    "id": "f043c56c",
    "metadata": {},
    "source": [
+    "## Assign Materials\n",
+    "\n",
     "The materials used in this example will be 32 MPa concrete and 500 MPa steel, specified in accordance with AS 3600:2018."
    ]
   },
@@ -80,6 +82,8 @@
    "id": "47b6a2a8",
    "metadata": {},
    "source": [
+    "## Create Geometry and Concrete Section\n",
+    "\n",
     "The section being analysed in this example is a 600D x 400W rectangular beam. The reinforcement detailed is 3N20 top bars and 3N24 bottom bars, with 30 mm of clear cover. The geometry is generated using the *sectionproperties* concrete sections library."
    ]
   },
@@ -116,6 +120,8 @@
    "id": "c4d5fa61",
    "metadata": {},
    "source": [
+    "## Gross Properties\n",
+    "\n",
     "Creating a ``ConcreteSection`` object automatically calculates the gross area properties of the reinforced concrete cross-section. These can be obtained by using the ``get_gross_properties()`` method. The section properties can be printed by calling the ``print_results()`` method."
    ]
   },
@@ -135,6 +141,8 @@
    "id": "894b8070",
    "metadata": {},
    "source": [
+    "## Transformed Properties\n",
+    "\n",
     "The above section properties are multiplied by the elastic moduli, e.g. axial rigidity (``EA``) and flexural rigidity (``EI``). Transformed section properties can be obtained using ``get_transformed_gross_properties()`` and providing a reference ``elastic_modulus``."
    ]
   },
