--- a/docs/source/notebooks/cracked_properties.ipynb
+++ b/docs/source/notebooks/cracked_properties.ipynb
@@ -24,14 +24,14 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sectionproperties.pre.library.concrete_sections import concrete_tee_section\n",
     "from concreteproperties.material import Concrete, Steel\n",
-    "from concreteproperties.concrete_section import ConcreteSection\n",
     "from concreteproperties.stress_strain_profile import (\n",
     "    ConcreteLinear,\n",
     "    RectangularStressBlock,\n",
     "    SteelElasticPlastic,\n",
-    ")"
+    ")\n",
+    "from sectionproperties.pre.library.concrete_sections import concrete_tee_section\n",
+    "from concreteproperties.concrete_section import ConcreteSection"
    ]
   },
   {
