Stress analysis example; add kappa param to service_stress; add sum forces, moments to StressResult

--- a/docs/source/notebooks/moment_curvature.ipynb
+++ b/docs/source/notebooks/moment_curvature.ipynb
@@ -238,12 +238,16 @@
     "labels = []\n",
     "\n",
     "# loop through each concrete material\n",
-    "for conc in conc_material_list:\n",
+    "for idx, conc in enumerate(conc_material_list):\n",
     "    # assign concrete material to first geometry in CompoundGeometry object\n",
     "    geom.geoms[0].material = conc\n",
     "\n",
     "    # create ConcreteSection object\n",
     "    conc_sec = ConcreteSection(geom)\n",
+    "\n",
+    "    # plot section first time only\n",
+    "    if idx == 0:\n",
+    "        conc_sec.plot_section()\n",
     "\n",
     "    # perform moment curvature analysis and store results\n",
     "    # bending about major axis so theta = pi/2\n",
