Lint with black

--- a/docs/source/_static/animation.ipynb
+++ b/docs/source/_static/animation.ipynb
@@ -97,7 +97,7 @@
     "    [850, 1200],\n",
     "    [50, 1200],\n",
     "    [0, 1150],\n",
-    "    [0, 50]\n",
+    "    [0, 50],\n",
     "]\n",
     "inner_points = [\n",
     "    [50, 0],\n",
@@ -107,7 +107,7 @@
     "    [550, 900],\n",
     "    [50, 900],\n",
     "    [0, 850],\n",
-    "    [0, 50]\n",
+    "    [0, 50],\n",
     "]\n",
     "outer = Geometry(geom=Polygon(outer_points), material=concrete)\n",
     "inner = Geometry(geom=Polygon(inner_points)).align_center(align_to=outer)\n",
@@ -308,19 +308,26 @@
     "from matplotlib.collections import PatchCollection\n",
     "import warnings\n",
     "\n",
+    "\n",
     "def plot_stress_and_graph(res_idx, mk_res_list, k_list, m_list, **kwargs):\n",
     "    with plotting_context(title=\"Stress\", **kwargs) as (fig, ax):\n",
     "        # plot background\n",
-    "        mk_res_list[res_idx].concrete_section.plot_section(background=True, **dict(kwargs, ax=ax))\n",
-    "        \n",
+    "        mk_res_list[res_idx].concrete_section.plot_section(\n",
+    "            background=True, **dict(kwargs, ax=ax)\n",
+    "        )\n",
+    "\n",
     "        # set up the colormaps\n",
     "        cmap_conc = cm.get_cmap(name=\"RdGy\")\n",
     "        cmap_steel = cm.get_cmap(name=\"bwr\")\n",
     "\n",
     "        # determine minimum and maximum stress values for the contour list\n",
     "        # add tolerance for plotting stress blocks\n",
-    "        conc_sig_min = min([min(x) for x in mk_res_list[res_idx].concrete_stresses]) - 1e-12\n",
-    "        conc_sig_max = max([max(x) for x in mk_res_list[res_idx].concrete_stresses]) + 1e-12\n",
+    "        conc_sig_min = (\n",
+    "            min([min(x) for x in mk_res_list[res_idx].concrete_stresses]) - 1e-12\n",
+    "        )\n",
+    "        conc_sig_max = (\n",
+    "            max([max(x) for x in mk_res_list[res_idx].concrete_stresses]) + 1e-12\n",
+    "        )\n",
     "        steel_sig_min = min(mk_res_list[res_idx].steel_stresses)\n",
     "        steel_sig_max = max(mk_res_list[res_idx].steel_stresses)\n",
     "\n",
@@ -329,18 +336,24 @@
     "        v_steel = np.linspace(steel_sig_min, steel_sig_max, 15, endpoint=True)\n",
     "        ticks_conc = v_conc\n",
     "        ticks_steel = v_steel\n",
-    "        \n",
+    "\n",
     "        # plot the concrete stresses\n",
     "        for idx, sig in enumerate(mk_res_list[res_idx].concrete_stresses):\n",
     "            # check region has a force\n",
     "            if abs(mk_res_list[res_idx].concrete_forces[idx][0]) > 1e-8:\n",
     "                # create triangulation\n",
     "                triang = tri.Triangulation(\n",
-    "                    mk_res_list[res_idx].concrete_analysis_sections[idx].mesh_nodes[:, 0],\n",
-    "                    mk_res_list[res_idx].concrete_analysis_sections[idx].mesh_nodes[:, 1],\n",
-    "                    mk_res_list[res_idx].concrete_analysis_sections[idx].mesh_elements[:, 0:3],\n",
+    "                    mk_res_list[res_idx]\n",
+    "                    .concrete_analysis_sections[idx]\n",
+    "                    .mesh_nodes[:, 0],\n",
+    "                    mk_res_list[res_idx]\n",
+    "                    .concrete_analysis_sections[idx]\n",
+    "                    .mesh_nodes[:, 1],\n",
+    "                    mk_res_list[res_idx]\n",
+    "                    .concrete_analysis_sections[idx]\n",
+    "                    .mesh_elements[:, 0:3],\n",
     "                )\n",
-    "                \n",
+    "\n",
     "                # plot the filled contour\n",
     "                trictr = ax.tricontourf(\n",
     "                    triang, sig, v_conc, cmap=cmap_conc, norm=CenteredNorm()\n",
@@ -373,7 +386,7 @@
     "                    CS = ax.tricontour(\n",
     "                        triang, sig, [zero_level], linewidths=1, linestyles=\"dashed\"\n",
     "                    )\n",
-    "                    \n",
+    "\n",
     "        # plot the steel stresses\n",
     "        steel_patches = []\n",
     "        colours = []\n",
@@ -382,9 +395,9 @@
     "            steel_patches.append(\n",
     "                mpatches.Polygon(\n",
     "                    xy=list(\n",
-    "                        mk_res_list[res_idx].concrete_section.steel_geometries[\n",
-    "                            idx\n",
-    "                        ].geom.exterior.coords\n",
+    "                        mk_res_list[res_idx]\n",
+    "                        .concrete_section.steel_geometries[idx]\n",
+    "                        .geom.exterior.coords\n",
     "                    )\n",
     "                )\n",
     "            )\n",
@@ -394,16 +407,16 @@
     "        patch.set_array(colours)\n",
     "        ax.add_collection(patch)\n",
     "        ax.set_aspect(\"equal\", anchor=\"C\")\n",
-    "        ax.set_xlim(0,900)\n",
-    "        ax.set_ylim(0,1200)\n",
-    "        \n",
+    "        ax.set_xlim(0, 900)\n",
+    "        ax.set_ylim(0, 1200)\n",
+    "\n",
     "        fig = ax.get_figure()\n",
-    "        fig.axes[1].plot(k_list[:res_idx+2], np.array(m_list[:res_idx+2])/1e6)\n",
+    "        fig.axes[1].plot(k_list[: res_idx + 2], np.array(m_list[: res_idx + 2]) / 1e6)\n",
     "        plt.xlabel(\"Curvature\")\n",
     "        plt.ylabel(\"Moment\")\n",
     "        plt.title(\"Moment-Curvature\")\n",
-    "        fig.axes[1].set_xlim(0,2.5e-5)\n",
-    "        fig.axes[1].set_ylim(0,3700)\n",
+    "        fig.axes[1].set_xlim(0, 2.5e-5)\n",
+    "        fig.axes[1].set_ylim(0, 3700)\n",
     "        plt.grid(True)\n",
     "\n",
     "    return ax"
@@ -421,7 +434,13 @@
     "# generate images\n",
     "for i in range(len(stress_res_list)):\n",
     "    ax = plot_stress_and_graph(\n",
-    "        i, stress_res_list, kappa_list, moment_list, ncols=2, filename=f\"anim/{i:03d}.png\", dpi=200\n",
+    "        i,\n",
+    "        stress_res_list,\n",
+    "        kappa_list,\n",
+    "        moment_list,\n",
+    "        ncols=2,\n",
+    "        filename=f\"anim/{i:03d}.png\",\n",
+    "        dpi=200,\n",
     "    )"
    ]
   },
