Add design codes and AS3600; store UBR in MID and BBD; compressive strain for squash load; fmt for plots; compressive strength for ConcreteLinearNoTension

--- a/docs/source/notebooks/moment_curvature.ipynb
+++ b/docs/source/notebooks/moment_curvature.ipynb
@@ -276,7 +276,7 @@
    "outputs": [],
    "source": [
     "MomentCurvatureResults.plot_multiple_results(\n",
-    "    moment_curvature_results=moment_curvature_results, labels=labels\n",
+    "    moment_curvature_results=moment_curvature_results, labels=labels, fmt=\"-\"\n",
     ")"
    ]
   },
@@ -314,7 +314,7 @@
    "outputs": [],
    "source": [
     "MomentCurvatureResults.plot_multiple_results(\n",
-    "    moment_curvature_results=moment_curvature_results[1:], labels=labels[1:]\n",
+    "    moment_curvature_results=moment_curvature_results[1:], labels=labels[1:], fmt=\"-\"\n",
     ")"
    ]
   },
@@ -443,7 +443,7 @@
    "outputs": [],
    "source": [
     "MomentCurvatureResults.plot_multiple_results(\n",
-    "    moment_curvature_results=moment_curvature_results, labels=labels\n",
+    "    moment_curvature_results=moment_curvature_results, labels=labels, fmt=\"-\"\n",
     ")"
    ]
   },
