--- a/docs/source/notebooks/moment_interaction.ipynb
+++ b/docs/source/notebooks/moment_interaction.ipynb
@@ -185,7 +185,7 @@
    "outputs": [],
    "source": [
     "mi_res = conc_sec.moment_interaction_diagram(m_neg=True, n_points=48)\n",
-    "mi_res.plot_diagram()"
+    "mi_res.plot_diagram(fmt=\"-\")"
    ]
   },
   {
