--- a/docs/source/notebooks/biaxial_bending.ipynb
+++ b/docs/source/notebooks/biaxial_bending.ipynb
@@ -190,8 +190,8 @@
     "mi_y = conc_sec.moment_interaction_diagram(theta=np.pi / 2)\n",
     "mi_x.plot_diagram()\n",
     "mi_y.plot_diagram()\n",
-    "print(f\"Decompression point for M_x is N = {mi_x.n[1] / 1e3:.2f} kN\")\n",
-    "print(f\"Decompression point for M_y is N = {mi_y.n[1] / 1e3:.2f} kN\")"
+    "print(f\"Decompression point for M_x is N = {mi_x.results[1].n / 1e3:.2f} kN\")\n",
+    "print(f\"Decompression point for M_y is N = {mi_y.results[1].n / 1e3:.2f} kN\")"
    ]
   },
   {
