--- a/docs/source/notebooks/moment_interaction.ipynb
+++ b/docs/source/notebooks/moment_interaction.ipynb
@@ -248,7 +248,7 @@
    "source": [
     "# plot all the diagrams on one image\n",
     "MomentInteractionResults.plot_multiple_diagrams(\n",
-    "    moment_interaction_results=mi_results, labels=labels\n",
+    "    moment_interaction_results=mi_results, labels=labels, fmt=\"-\"\n",
     ")"
    ]
   }
