Add more cracked results; fix cracked stress (lever arms now broken)

--- a/docs/source/notebooks/biaxial_bending.ipynb
+++ b/docs/source/notebooks/biaxial_bending.ipynb
@@ -138,7 +138,7 @@
    "id": "cade96c6",
    "metadata": {},
    "source": [
-    "We can plot the biaxial bending diagram by calling the plot_diagram() method."
+    "We can plot the biaxial bending diagram by calling the ``plot_diagram()`` method."
    ]
   },
   {
