Uncracked and cracked lever arms now in x&y direction; fix uncracked stress NA rotation

--- a/docs/source/notebooks/stress_analysis.ipynb
+++ b/docs/source/notebooks/stress_analysis.ipynb
@@ -243,16 +243,22 @@
     "    # get concrete results\n",
     "    sigs_conc = cracked_stress_res.concrete_stresses[idx]\n",
     "    f_conc = cracked_stress_res.concrete_forces[idx][0]\n",
-    "    d_conc = cracked_stress_res.concrete_forces[idx][1]\n",
-    "    m_conc = f_conc * d_conc\n",
+    "    d_x_conc = cracked_stress_res.concrete_forces[idx][1]\n",
+    "    d_y_conc = cracked_stress_res.concrete_forces[idx][2]\n",
+    "    m_x_conc = f_conc * d_y_conc\n",
+    "    m_y_conc = f_conc * d_x_conc\n",
+    "    m_conc = np.sqrt(m_x_conc * m_x_conc + m_y_conc * m_y_conc)\n",
     "\n",
     "    # print results\n",
     "    print(\"Concrete Stresses:\")\n",
     "    pprint(sigs_conc)\n",
     "    print(\"Concrete Net Force & Lever Arm:\")\n",
     "    print(f\"F_c = {f_conc / 1e3:.2f} kN\")\n",
-    "    print(f\"d_n = {d_conc:.2f} mm\")\n",
-    "    print(f\"F_c = {m_conc / 1e6:.2f} kN.m\")"
+    "    print(f\"d_x_n = {d_x_conc:.2f} mm\")\n",
+    "    print(f\"d_y_n = {d_y_conc:.2f} mm\")\n",
+    "    print(f\"M_x_c = {m_x_conc / 1e6:.2f} kN.m\")\n",
+    "    print(f\"M_y_c = {m_y_conc / 1e6:.2f} kN.m\")\n",
+    "    print(f\"M_c = {m_conc / 1e6:.2f} kN.m\")"
    ]
   },
   {
@@ -276,7 +282,7 @@
     "\n",
     "# store forces & moments for later\n",
     "forces = []\n",
-    "moments = []\n",
+    "moments_x = []\n",
     "\n",
     "# create a Rich table for pretty printing\n",
     "table = Table(title=\"Steel Results\")\n",
@@ -292,12 +298,12 @@
     "    centroid = steel_geom.calculate_centroid()\n",
     "    stress = cracked_stress_res.steel_stresses[idx]\n",
     "    strain = cracked_stress_res.steel_strains[idx]\n",
-    "    force, d = cracked_stress_res.steel_forces[idx]\n",
+    "    force, d_x, d_y = cracked_stress_res.steel_forces[idx]\n",
     "\n",
     "    # calculate the moment each bar creates and store the results\n",
-    "    moment = force * d\n",
+    "    moment_x = force * d_y\n",
     "    forces.append(force)\n",
-    "    moments.append(moment)\n",
+    "    moments_x.append(moment_x)\n",
     "\n",
     "    # print compression or tension\n",
     "    if strain > 0:\n",
@@ -310,8 +316,8 @@
     "        f\"({centroid[0]:.1f}, {centroid[1]:.1f})\",\n",
     "        f\"{abs(stress):.1f} ({t_or_c})\",\n",
     "        f\"{abs(force) / 1e3:.1f}\",\n",
-    "        f\"{d:.1f}\",\n",
-    "        f\"{moment / 1e6:.2f}\",\n",
+    "        f\"{d_y:.1f}\",\n",
+    "        f\"{moment_x / 1e6:.2f}\",\n",
     "    )\n",
     "\n",
     "console = Console()\n",
@@ -338,7 +344,7 @@
     "print(f\"Sum of Internal Forces: {int_force / 1e3:.0f} kN\")\n",
     "\n",
     "# sum of moments\n",
-    "int_moment = sum(moments) + m_conc\n",
+    "int_moment = sum(moments_x) + m_conc\n",
     "print(f\"Sum of Internal Moments: {int_moment / 1e6:.0f} kN.m\")\n",
     "print(f\"External Moment: {m_ext / 1e6:.0f} kN.m\")"
    ]
@@ -429,7 +435,7 @@
     "        service_stress_res = conc_sec.calculate_service_stress(\n",
     "            moment_curvature_results=mk_res, m=None, kappa=s_in[\"val\"]\n",
     "        )\n",
-    "        m_stress = service_stress_res.sum_moments()\n",
+    "        m_stress = service_stress_res.sum_moments()[2]\n",
     "\n",
     "    # create plot title and plot stress\n",
     "    label = f\"Moment = {m_stress / 1e6:.0f} kN.m\"\n",
