Add 2d multiple biaxial bending plot

--- a/docs/source/notebooks/biaxial_bending.ipynb
+++ b/docs/source/notebooks/biaxial_bending.ipynb
@@ -228,10 +228,57 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7d0774f2",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "BiaxialBendingResults.plot_multiple_diagrams_3d(biaxial_results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89d391ff",
+   "metadata": {},
+   "source": [
+    "We can also generate a 2D plot of selected biaxial bending results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "612a73d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "BiaxialBendingResults.plot_multiple_diagrams(biaxial_results)"
+    "BiaxialBendingResults.plot_multiple_diagrams_2d(biaxial_results[::2], fmt=\"-\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb6e59f9",
+   "metadata": {},
+   "source": [
+    "We can specify custom labels for the above plot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2c9f2d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = []\n",
+    "\n",
+    "for bb_res in biaxial_results[::2]:\n",
+    "    labels.append(f\"N = {bb_res.n / 1e3:.0f} kN\")\n",
+    "    \n",
+    "ax = BiaxialBendingResults.plot_multiple_diagrams_2d(biaxial_results[::2], fmt=\"-\", labels=labels, render=False)\n",
+    "ax.set_xlabel(\"Bending Moment $M_x$ [kN.m]\")\n",
+    "ax.set_ylabel(\"Bending Moment $M_y$ [kN.m]\")\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.show()"
    ]
   }
  ],
