--- a/docs/source/notebooks/moment_interaction.ipynb
+++ b/docs/source/notebooks/moment_interaction.ipynb
@@ -171,33 +171,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "670cb44c",
-   "metadata": {},
-   "source": [
-    "It's also possible to plot a diagram for positive and negative bending (sagging and hogging). We do this by setting the parameter ``m_neg=True``. We can control the number of points between the pure bending point and decompression point by modifying the parameter ``n_points``."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7d9611f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mi_res = conc_sec.moment_interaction_diagram(m_neg=True, n_points=48)\n",
-    "mi_res.plot_diagram(fmt=\"-\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b8436e9d",
-   "metadata": {},
-   "source": [
-    "In the above plot the bending capacity is higher for positive bending and not symmetric. This is because the bottom bars (3N24) provide more area than the top bars (3N20)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "1f416faf",
    "metadata": {},
    "source": [
@@ -250,6 +223,58 @@
     "MomentInteractionResults.plot_multiple_diagrams(\n",
     "    moment_interaction_results=mi_results, labels=labels, fmt=\"-\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f38b7e98",
+   "metadata": {},
+   "source": [
+    "We can combine positive and negative bending on one plot using the ``plot_multiple_diagrams()`` method. Here we genearte results for ``theta = 0`` and ``theta = np.pi`` and manually edit the negative bending results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b21e2799",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geom = concrete_rectangular_section(\n",
+    "    b=400,\n",
+    "    d=600,\n",
+    "    dia_top=20,\n",
+    "    n_top=3,\n",
+    "    dia_bot=24,\n",
+    "    n_bot=3,\n",
+    "    n_circle=4,\n",
+    "    cover=30,\n",
+    "    area_top=310,\n",
+    "    area_bot=450,\n",
+    "    conc_mat=concrete,\n",
+    "    steel_mat=steel,\n",
+    ")\n",
+    "conc_sec = ConcreteSection(geom)\n",
+    "\n",
+    "mi_res_pos = conc_sec.moment_interaction_diagram()\n",
+    "mi_res_neg = conc_sec.moment_interaction_diagram(theta=np.pi)\n",
+    "\n",
+    "for ult_res in mi_res_neg.results:\n",
+    "    ult_res.m_u *= -1\n",
+    "\n",
+    "MomentInteractionResults.plot_multiple_diagrams(\n",
+    "    moment_interaction_results=[mi_res_pos, mi_res_neg],\n",
+    "    labels=[\"Positive\", \"Negative\"],\n",
+    "    fmt=\"-\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1bf74bb",
+   "metadata": {},
+   "source": [
+    "In the above plot the bending capacity is higher for positive bending and not symmetric. This is because the bottom bars (3N24) provide more area than the top bars (3N20)."
    ]
   }
  ],
