Start taking moments about elastic centroid; add zero curvature analysis; extensions for moment interaction

--- a/docs/source/notebooks/moment_curvature.ipynb
+++ b/docs/source/notebooks/moment_curvature.ipynb
@@ -370,8 +370,8 @@
     "\n",
     "fix, ax = plt.subplots()\n",
     "kappa = np.array(moment_curvature_results[-1].kappa)\n",
-    "moment = np.array(moment_curvature_results[-1].moment) / 1e6\n",
-    "ax.plot(kappa[:14], moment[:14], \"x-\")\n",
+    "moment = np.array(moment_curvature_results[-1].m_xy) / 1e6\n",
+    "ax.plot(kappa[:16], moment[:16], \"x-\")\n",
     "plt.show()"
    ]
   },
