--- a/docs/source/notebooks/design_codes.ipynb
+++ b/docs/source/notebooks/design_codes.ipynb
@@ -171,10 +171,10 @@
    "outputs": [],
    "source": [
     "f_ult_res, ult_res, phi = design_code.ultimate_bending_capacity()\n",
-    "print(f\"Muo = {ult_res.m_u / 1e6:.2f} kN.m\")\n",
+    "print(f\"Muo = {ult_res.m_xy / 1e6:.2f} kN.m\")\n",
     "print(f\"kuo = {ult_res.k_u:.4f}\")\n",
     "print(f\"phi = {phi:.3f}\")\n",
-    "print(f\"phi.Muo = {f_ult_res.m_u / 1e6:.2f} kN.m\")"
+    "print(f\"phi.Muo = {f_ult_res.m_xy / 1e6:.2f} kN.m\")"
    ]
   },
   {
@@ -196,10 +196,10 @@
     "f_ult_res, ult_res, phi = design_code.ultimate_bending_capacity(n=n_star)\n",
     "print(f\"N* = {n_star / 1e3:.0f} kN\")\n",
     "print(f\"Nu = {ult_res.n / 1e3:.2f} kN\")\n",
-    "print(f\"Mu = {ult_res.m_u / 1e6:.2f} kN.m\")\n",
+    "print(f\"Mu = {ult_res.xy / 1e6:.2f} kN.m\")\n",
     "print(f\"phi = {phi:.3f}\")\n",
     "print(f\"phi.Nu = {f_ult_res.n / 1e3:.0f} kN\")\n",
-    "print(f\"phi.Mu = {f_ult_res.m_u / 1e6:.2f} kN.m\")"
+    "print(f\"phi.Mu = {f_ult_res.m_xy / 1e6:.2f} kN.m\")"
    ]
   },
   {
@@ -418,7 +418,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.12 ('cp')",
    "language": "python",
    "name": "python3"
   },
@@ -433,6 +433,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "cbcd46708823968cdeec8140ad70b4bb10e53ceac96cecaaf557485e336f0189"
+   }
   }
  },
  "nbformat": 4,
