--- a/docs/source/notebooks/ultimate_bending.ipynb
+++ b/docs/source/notebooks/ultimate_bending.ipynb
@@ -211,7 +211,7 @@
    "id": "9bf3442a",
    "metadata": {},
    "source": [
-    "We can also extract specific results from the ``UltimateBendingResults`` objects. Note that ``m_u`` refers to bending about the local axis, defined by $\\theta$."
+    "We can also extract specific results from the ``UltimateBendingResults`` objects. Note that ``m_xy`` refers to the resultant bending moment, so will always be positive."
    ]
   },
   {
@@ -221,9 +221,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"M_x+ = {sag_res.m_u / 1e6:.2f} kN.m\")\n",
-    "print(f\"M_x- = {hog_res.m_u / 1e6:.2f} kN.m\")\n",
-    "print(f\"M_y = {weak_res.m_u / 1e6:.2f} kN.m\")"
+    "print(f\"M_x+ = {sag_res.m_xy / 1e6:.2f} kN.m\")\n",
+    "print(f\"M_x- = {hog_res.m_xy / 1e6:.2f} kN.m\")\n",
+    "print(f\"M_y = {weak_res.m_xy / 1e6:.2f} kN.m\")"
    ]
   },
   {
@@ -264,13 +264,13 @@
    "outputs": [],
    "source": [
     "print(\n",
-    "    f\"M_x+ = {sag_axial_res.m_u / 1e6:.2f} kN.m with N = {sag_axial_res.n / 1e3:.0f} kN\"\n",
+    "    f\"M_x+ = {sag_axial_res.m_xy / 1e6:.2f} kN.m with N = {sag_axial_res.n / 1e3:.0f} kN\"\n",
     ")\n",
     "print(\n",
-    "    f\"M_x- = {hog_axial_res.m_u / 1e6:.2f} kN.m with N = {hog_axial_res.n / 1e3:.0f} kN\"\n",
+    "    f\"M_x- = {hog_axial_res.m_xy / 1e6:.2f} kN.m with N = {hog_axial_res.n / 1e3:.0f} kN\"\n",
     ")\n",
     "print(\n",
-    "    f\"M_y = {weak_axial_res.m_u / 1e6:.2f} kN.m with N = {weak_axial_res.n / 1e3:.0f} kN\"\n",
+    "    f\"M_y = {weak_axial_res.m_xy / 1e6:.2f} kN.m with N = {weak_axial_res.n / 1e3:.0f} kN\"\n",
     ")"
    ]
   }
@@ -292,6 +292,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "cbcd46708823968cdeec8140ad70b4bb10e53ceac96cecaaf557485e336f0189"
+   }
   }
  },
  "nbformat": 4,
