Fix service and ultimate stress analysis; fix as3600

--- a/docs/source/notebooks/biaxial_bending.ipynb
+++ b/docs/source/notebooks/biaxial_bending.ipynb
@@ -189,9 +189,9 @@
     "mi_x = conc_sec.moment_interaction_diagram()\n",
     "mi_y = conc_sec.moment_interaction_diagram(theta=np.pi / 2)\n",
     "mi_x.plot_diagram()\n",
-    "mi_y.plot_diagram()\n",
-    "print(f\"Decompression point for M_x is N = {mi_x.results[1].n / 1e3:.2f} kN\")\n",
-    "print(f\"Decompression point for M_y is N = {mi_y.results[1].n / 1e3:.2f} kN\")"
+    "mi_y.plot_diagram(moment=\"m_y\")\n",
+    "print(f\"Decompression point for M_x is N = {mi_x.results[3].n / 1e3:.2f} kN\")\n",
+    "print(f\"Decompression point for M_y is N = {mi_y.results[3].n / 1e3:.2f} kN\")"
    ]
   },
   {
