--- a/docs/source/notebooks/design_codes.ipynb
+++ b/docs/source/notebooks/design_codes.ipynb
@@ -196,7 +196,7 @@
     "f_ult_res, ult_res, phi = design_code.ultimate_bending_capacity(n=n_star)\n",
     "print(f\"N* = {n_star / 1e3:.0f} kN\")\n",
     "print(f\"Nu = {ult_res.n / 1e3:.2f} kN\")\n",
-    "print(f\"Mu = {ult_res.xy / 1e6:.2f} kN.m\")\n",
+    "print(f\"Mu = {ult_res.m_xy / 1e6:.2f} kN.m\")\n",
     "print(f\"phi = {phi:.3f}\")\n",
     "print(f\"phi.Nu = {f_ult_res.n / 1e3:.0f} kN\")\n",
     "print(f\"phi.Mu = {f_ult_res.m_xy / 1e6:.2f} kN.m\")"
@@ -257,7 +257,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "n_list, _ = mi_res.get_results_lists()  # get list of axial loads\n",
+    "n_list, _ = mi_res.get_results_lists(moment=\"m_x\")  # get list of axial loads\n",
     "ax.plot(np.array(n_list) / 1e3, phis, \"-x\")\n",
     "plt.xlabel(\"Axial Force [kN]\")\n",
     "plt.ylabel(\"$\\phi$\")\n",
@@ -418,7 +418,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('cp')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
