Start big restructure

--- a/docs/source/notebooks/moment_curvature.ipynb
+++ b/docs/source/notebooks/moment_curvature.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from concreteproperties.material import Concrete, Steel\n",
+    "from concreteproperties.material import Concrete, SteelBar\n",
     "import concreteproperties.stress_strain_profile as ssp\n",
     "from sectionproperties.pre.library.primitive_sections import (\n",
     "    rectangular_section,\n",
@@ -112,7 +112,7 @@
     "    conc_nonlinear,\n",
     "]\n",
     "\n",
-    "steel_ep = Steel(\n",
+    "steel_ep = SteelBar(\n",
     "    name=\"Steel - Elastic-Plastic\",\n",
     "    density=7.85e-6,\n",
     "    stress_strain_profile=ssp.SteelElasticPlastic(\n",
@@ -123,7 +123,7 @@
     "    colour=\"grey\",\n",
     ")\n",
     "\n",
-    "steel_hd = Steel(\n",
+    "steel_hd = SteelBar(\n",
     "    name=\"Steel - Hardening\",\n",
     "    density=7.85e-6,\n",
     "    stress_strain_profile=ssp.SteelHardening(\n",
