--- a/docs/source/notebooks/ultimate_bending.ipynb
+++ b/docs/source/notebooks/ultimate_bending.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from concreteproperties.material import Concrete, Steel\n",
+    "from concreteproperties.material import Concrete, SteelBar\n",
     "import concreteproperties.stress_strain_profile as ssp\n",
     "import sectionproperties.pre.library.primitive_sections as sp_ps\n",
     "from concreteproperties.pre import add_bar_rectangular_array\n",
@@ -62,7 +62,7 @@
     "    colour=\"lightgrey\",\n",
     ")\n",
     "\n",
-    "steel = Steel(\n",
+    "steel = SteelBar(\n",
     "    name=\"500 MPa Steel\",\n",
     "    density=7.85e-6,\n",
     "    stress_strain_profile=ssp.SteelElasticPlastic(\n",
