Add composite example; fix reinf stress contours; fix bug in split_geom_at_strains()

--- a/docs/source/notebooks/ultimate_bending.ipynb
+++ b/docs/source/notebooks/ultimate_bending.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "source": [
     "## Assign Materials\n",
-    "The materials used in this example will be 50 MPa concrete with 500 MPa, specified in accordance with AS 3600:2018."
+    "The materials used in this example will be 50 MPa concrete with 500 MPa steel, specified in accordance with AS 3600:2018."
    ]
   },
   {
