Fix ultimate analysis with no lumped reo; update docs

--- a/docs/source/notebooks/composite_section.ipynb
+++ b/docs/source/notebooks/composite_section.ipynb
@@ -501,6 +501,183 @@
     "    fmt=\"x-\",\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31c952e3",
+   "metadata": {},
+   "source": [
+    "## Composite Steel Beam\n",
+    "Finally we will analyse a steel composite beam, consisting of a 530UB92 universal beam compositely attached to a 1500 mm wide x 120 mm deep concrete slab. We start by defining the concrete material (32 MPa) for the slab."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65577277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "concrete = Concrete(\n",
+    "    name=\"32 MPa Concrete\",\n",
+    "    density=2.4e-6,\n",
+    "    stress_strain_profile=ssp.ConcreteLinearNoTension(\n",
+    "        elastic_modulus=30.1e3,\n",
+    "        ultimate_strain=0.003,\n",
+    "        compressive_strength=0.9 * 32,\n",
+    "    ),\n",
+    "    ultimate_stress_strain_profile=ssp.RectangularStressBlock(\n",
+    "        compressive_strength=32,\n",
+    "        alpha=0.802,\n",
+    "        gamma=0.89,\n",
+    "        ultimate_strain=0.003,\n",
+    "    ),\n",
+    "    alpha_squash=0.85,\n",
+    "    flexural_tensile_strength=3.4,\n",
+    "    colour=\"lightgrey\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "112ad018",
+   "metadata": {},
+   "source": [
+    "Next we construct the composite geometry."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d08a46da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create 530UB92\n",
+    "ub = sp_ss.i_section(\n",
+    "    d=533,\n",
+    "    b=209,\n",
+    "    t_f=15.6,\n",
+    "    t_w=10.2,\n",
+    "    r=14,\n",
+    "    n_r=8,\n",
+    "    material=steel_300,\n",
+    ")\n",
+    "\n",
+    "# create concrete slab, centre on top of UB\n",
+    "conc_slab = (\n",
+    "    sp_ps.rectangular_section(\n",
+    "        d=120,\n",
+    "        b=1500,\n",
+    "        material=concrete,\n",
+    "    )\n",
+    "    .align_center(align_to=ub)\n",
+    "    .align_to(other=ub, on=\"top\")\n",
+    ")\n",
+    "\n",
+    "# as there is no overlapping geometry, we can simply add the two sections together\n",
+    "geom = ub + conc_slab\n",
+    "\n",
+    "# the cross-section is rotated 90 degrees to aid viewing the stress plots\n",
+    "geom = geom.rotate_section(angle=np.pi / 2, use_radians=True)\n",
+    "\n",
+    "# create concrete section and plot\n",
+    "conc_sec = ConcreteSection(geom)\n",
+    "conc_sec.plot_section()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77745bac",
+   "metadata": {},
+   "source": [
+    "### Moment Curvature Response\n",
+    "Calculate the moment curvature response of the composite section. The section should show a gradual yielding response as plasticity develops over the depth of the steel beam."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcbc6333",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mk_res = conc_sec.moment_curvature_analysis(theta=np.pi / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f634623",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mk_res.plot_results()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5890c6c4",
+   "metadata": {},
+   "source": [
+    "We can examine the stresses at various point within the moment-curvature response."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b64edebc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "el_stress = conc_sec.calculate_service_stress(moment_curvature_results=mk_res, m=500e6)\n",
+    "yield_stress = conc_sec.calculate_service_stress(\n",
+    "    moment_curvature_results=mk_res, m=1000e6\n",
+    ")\n",
+    "ult_stress = conc_sec.calculate_service_stress(\n",
+    "    moment_curvature_results=mk_res, m=1200e6\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d56e8c7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "el_stress.plot_stress()\n",
+    "yield_stress.plot_stress()\n",
+    "ult_stress.plot_stress()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9695c03",
+   "metadata": {},
+   "source": [
+    "### Ultimate Bending Capacity\n",
+    "The ultimate bending capacity can be calculated and compared to the result obtained from the moment curvature analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1c8cd3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ult_res = conc_sec.ultimate_bending_capacity(theta=np.pi / 2)\n",
+    "ult_res.print_results()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f95ae617",
+   "metadata": {},
+   "source": [
+    "The above results match closely with the moment curvature results, as will as confirming that the neutral axis is within the concrete slab. Note that ``k_u`` is not calculated for only meshed sections, it is only computed for lumped reinforcement."
+   ]
   }
  ],
  "metadata": {
