Remove alpha_squash from Concrete material

--- a/docs/source/notebooks/moment_interaction.ipynb
+++ b/docs/source/notebooks/moment_interaction.ipynb
@@ -61,7 +61,6 @@
     "        gamma=0.89,\n",
     "        ultimate_strain=0.003,\n",
     "    ),\n",
-    "    alpha_squash=0.85,\n",
     "    flexural_tensile_strength=3.4,\n",
     "    colour=\"lightgrey\",\n",
     ")\n",
@@ -358,7 +357,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.12 ('cp')",
    "language": "python",
    "name": "python3"
   },
@@ -376,7 +375,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "cbcd46708823968cdeec8140ad70b4bb10e53ceac96cecaaf557485e336f0189"
+    "hash": "893b3ef6d13023afab4be8c5000be38ce11a760491bcfa4047435852657817d1"
    }
   }
  },
