--- a/docs/source/notebooks/composite_section.ipynb
+++ b/docs/source/notebooks/composite_section.ipynb
@@ -64,7 +64,6 @@
     "        gamma=0.845,\n",
     "        ultimate_strain=0.003,\n",
     "    ),\n",
-    "    alpha_squash=0.85,\n",
     "    flexural_tensile_strength=4.2,\n",
     "    colour=\"lightgrey\",\n",
     ")\n",
@@ -532,7 +531,6 @@
     "        gamma=0.89,\n",
     "        ultimate_strain=0.003,\n",
     "    ),\n",
-    "    alpha_squash=0.85,\n",
     "    flexural_tensile_strength=3.4,\n",
     "    colour=\"lightgrey\",\n",
     ")"
@@ -682,7 +680,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.12 ('cp')",
    "language": "python",
    "name": "python3"
   },
@@ -697,6 +695,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "893b3ef6d13023afab4be8c5000be38ce11a760491bcfa4047435852657817d1"
+   }
   }
  },
  "nbformat": 4,
