--- a/docs/source/notebooks/design_codes.ipynb
+++ b/docs/source/notebooks/design_codes.ipynb
@@ -65,7 +65,6 @@
     "print(f\"Density = {concrete.density} kg/mm^3\")\n",
     "concrete.stress_strain_profile.plot_stress_strain(title=\"Service Profile\")\n",
     "concrete.ultimate_stress_strain_profile.plot_stress_strain(title=\"Ultimate Profile\")\n",
-    "print(f\"Alpha Squash = {concrete.alpha_squash}\")\n",
     "print(\n",
     "    f\"Concrete Flexural Tensile Strength: {concrete.flexural_tensile_strength:.2f} MPa\"\n",
     ")"
@@ -418,7 +417,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.12 ('cp')",
    "language": "python",
    "name": "python3"
   },
@@ -436,7 +435,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "cbcd46708823968cdeec8140ad70b4bb10e53ceac96cecaaf557485e336f0189"
+    "hash": "893b3ef6d13023afab4be8c5000be38ce11a760491bcfa4047435852657817d1"
    }
   }
  },
