--- a/docs/source/notebooks/moment_curvature.ipynb
+++ b/docs/source/notebooks/moment_curvature.ipynb
@@ -63,7 +63,6 @@
     "        compressive_strain=0.00175,\n",
     "        ultimate_strain=0.0035,\n",
     "    ),\n",
-    "    alpha_squash=0.85,\n",
     "    flexural_tensile_strength=3.5,\n",
     "    colour=\"lightgrey\",\n",
     ")\n",
@@ -79,7 +78,6 @@
     "        compressive_strain=0.00175,\n",
     "        ultimate_strain=0.0035,\n",
     "    ),\n",
-    "    alpha_squash=0.85,\n",
     "    flexural_tensile_strength=3.5,\n",
     "    colour=\"lightgrey\",\n",
     ")\n",
@@ -101,7 +99,6 @@
     "        compressive_strain=0.00175,\n",
     "        ultimate_strain=0.0035,\n",
     "    ),\n",
-    "    alpha_squash=0.85,\n",
     "    flexural_tensile_strength=3.5,\n",
     "    colour=\"lightgrey\",\n",
     ")\n",
@@ -458,7 +455,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.12 ('cp')",
    "language": "python",
    "name": "python3"
   },
@@ -473,6 +470,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "893b3ef6d13023afab4be8c5000be38ce11a760491bcfa4047435852657817d1"
+   }
   }
  },
  "nbformat": 4,
