--- a/docs/source/notebooks/stress_analysis.ipynb
+++ b/docs/source/notebooks/stress_analysis.ipynb
@@ -68,7 +68,6 @@
     "        gamma=0.87,\n",
     "        ultimate_strain=0.003,\n",
     "    ),\n",
-    "    alpha_squash=0.85,\n",
     "    flexural_tensile_strength=3.8,\n",
     "    colour=\"lightgrey\",\n",
     ")\n",
@@ -539,7 +538,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.12 ('cp')",
    "language": "python",
    "name": "python3"
   },
@@ -554,6 +553,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "893b3ef6d13023afab4be8c5000be38ce11a760491bcfa4047435852657817d1"
+   }
   }
  },
  "nbformat": 4,
