Create design_codes subpackage; modify design codes docs structure

--- a/docs/source/notebooks/as3600.ipynb
+++ b/docs/source/notebooks/as3600.ipynb
@@ -5,8 +5,8 @@
    "id": "74325597",
    "metadata": {},
    "source": [
-    "# Design Codes\n",
-    "This example demonstrates how to work with design codes. We start by importing the necessary modules."
+    "# AS3600 Design Code\n",
+    "This example demonstrates how to work with the AS3600:2018 design code. We start by importing the necessary modules."
    ]
   },
   {
@@ -18,7 +18,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from concreteproperties.design_codes import AS3600\n",
+    "from concreteproperties.design_codes.as3600 import AS3600\n",
     "import concreteproperties.stress_strain_profile as ssp\n",
     "from sectionproperties.pre.library.concrete_sections import concrete_rectangular_section\n",
     "from concreteproperties.concrete_section import ConcreteSection\n",
@@ -31,7 +31,7 @@
    "metadata": {},
    "source": [
     "## Create Design Code and Materials\n",
-    "In this example we'll use the AS 3600:2018 design code. 40 MPa concrete will be used with the default 500N steel."
+    "In this example 40 MPa concrete will be used with the default 500N steel."
    ]
   },
   {
@@ -417,7 +417,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('cp')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
