add NZS3101 to design codes docs structure- draft

--- a/docs/source/notebooks/nzs3101.ipynb
+++ b/docs/source/notebooks/nzs3101.ipynb
@@ -5,7 +5,7 @@
    "id": "74325597",
    "metadata": {},
    "source": [
-    "# Design Codes\n",
+    "# NZS3101 Design Code\n",
     "This example demonstrates how to work with design codes. We start by importing the necessary modules."
    ]
   },
@@ -20,7 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "from shapely.geometry import Polygon\n",
     "import shapely.geometry\n",
-    "from concreteproperties.design_codes import NZS3101\n",
+    "from concreteproperties.design_codes.nzs3101 import NZS3101\n",
     "import concreteproperties.stress_strain_profile as ssp\n",
     "from sectionproperties.pre.library.concrete_sections import concrete_rectangular_section\n",
     "from concreteproperties.concrete_section import ConcreteSection\n",
