remove unused imports from NZS3101 example notebook

--- a/docs/source/notebooks/nzs3101.ipynb
+++ b/docs/source/notebooks/nzs3101.ipynb
@@ -19,7 +19,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from concreteproperties.design_codes.nzs3101 import NZS3101\n",
-    "import concreteproperties.utils as utils\n",
     "import concreteproperties.stress_strain_profile as ssp\n",
     "from concreteproperties.material import Concrete\n",
     "from concreteproperties.stress_strain_profile import ModifiedMander\n",
@@ -27,8 +26,7 @@
     "from concreteproperties.concrete_section import ConcreteSection\n",
     "from concreteproperties.results import MomentInteractionResults\n",
     "from concreteproperties.results import BiaxialBendingResults\n",
-    "from concreteproperties.results import MomentCurvatureResults\n",
-    "from scipy.optimize import brentq\n"
+    "from concreteproperties.results import MomentCurvatureResults\n"
    ]
   },
   {
