tidy up docs after docs change

--- a/docs/source/notebooks/nzs3101.ipynb
+++ b/docs/source/notebooks/nzs3101.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# NZS3101 Design Code\n",
-    "This example demonstrates how to work with the NZS3101 concrete design code. We start by importing the necessary modules."
+    "This example demonstrates how to work with the NZS3101 concrete design code. We start by importing the necessary modules: -"
    ]
   },
   {
@@ -178,6 +178,7 @@
     "The factored ultimate bending capacity can be found by calling the ``ultimate_bending_capacity()`` method. This method returns a factored and unfactored ``UltimateBendingResults`` object, as well as the capacity reduction factor ``phi``.\n",
     "\n",
     "The NZS3101 design code class includes five valid analysis types that can be provided to the analysis method: -\n",
+    "\n",
     "* NZS3101-based design checks\n",
     "\n",
     "    - ``nom_chk`` - Nominal design capacity check - undertake an analysis with $\\phi$ = 0.85, and lower characteristic material properties\n",
