--- a/docs/source/notebooks/composite_section.ipynb
+++ b/docs/source/notebooks/composite_section.ipynb
@@ -600,8 +600,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"cx_geom = {conc_sec.moment_centroid[0]:.2f}; cy_geom = {conc_sec.moment_centroid[1]:.2f}\")\n",
-    "print(f\"cx_gross = {conc_sec.gross_properties.cx_gross:.2f}; cy_gross = {conc_sec.gross_properties.cy_gross:.2f}\")"
+    "print(\n",
+    "    f\"cx_geom = {conc_sec.moment_centroid[0]:.2f}; cy_geom = {conc_sec.moment_centroid[1]:.2f}\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"cx_gross = {conc_sec.gross_properties.cx_gross:.2f}; cy_gross = {conc_sec.gross_properties.cy_gross:.2f}\"\n",
+    ")"
    ]
   },
   {
